fix(css): text-overflow fixed, better fixed cell bleed fix

--- a/src/front/less/tables.less
+++ b/src/front/less/tables.less
@@ -7,8 +7,13 @@
 .public_fixedDataTable_header { &, & .public_fixedDataTableCell_main { background: @table-bg-accent; } }
 .public_fixedDataTable_footer .public_fixedDataTableCell_main { .state('info'); }
 .fixedDataTableCellGroupLayout_cellGroup .public_fixedDataTableCell_main {
-  white-space: nowrap; text-overflow: ellipsis; // FIXME: text-overflow
+  white-space: nowrap;
   &:hover { white-space: normal; word-break: break-word; }
+}
+.public_fixedDataTable_bodyRow {
+  .public_fixedDataTableCell_wrap1,
+  .public_fixedDataTableCell_wrap2,
+  .public_fixedDataTableCell_wrap3 { display: block; }
 }
 
 // table hovering logic
@@ -25,6 +30,7 @@
 .public_fixedDataTableCell_cellContent {
   min-height: @ps-table-row-height;
   margin-right: 1px;
+  overflow: hidden; text-overflow: ellipsis;
   .public_fixedDataTableCell_main:first-child & { margin-left: -1px; }
   &:hover {
     .public_fixedDataTable_bodyRow & { .state('warning'); }
@@ -43,6 +49,6 @@
   line-height: @ps-table-row-height; font-size: @ps-table-row-height / 1.2;
   .public_fixedDataTableCell_cellContent { padding-top: 0; padding-bottom: 0; }
 }
-.fixedDataTableRowLayout_body > :first-child {
-  .public_fixedDataTableCell_cellContent { height: @ps-table-row-height; } // FIXME: hack to ensure fixed cells never bleed on :hover
+.fixedDataTableRowLayout_body > :first-child { // fixed cells on left
+  .public_fixedDataTableCell_wrap1 { overflow: hidden; }
 }
